--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width">
 
     <!-- CSS -->
-    <link href="../css/base.css" rel="stylesheet">
+    <link href="base.css" rel="stylesheet">
     <!-- /CSS -->
 </head>
 
