--- a/index.html
+++ b/index.html
@@ -15,52 +15,55 @@
 <body>
     <!-- headmenu -->
     <header>
-        <div class="header">
+        <div id="header">
             <a href="index.html">非常識なエーテル</a>
         </div>
     </header>
 
-    <div class="head_menu">
+    <div id="head_menu">
         <ul>
-            <li><a href="index.html">トップページ</a></li>
+            <li><a href="index.html">TOP PAGE</a></li>
             <li><a href="index.html">TOP</a></li>
             <li><a href="index.html">🍤</a></li>
-            <li><a href="index.html">あ</a></li>
-            <li><a href="index.html">外部リンク</a></li>
+            <li><a href="index.html">A</a></li>
+            <li><a href="index.html">Link</a></li>
         </ul>
     </div>
     <!-- /headmenu -->
 
     <!-- body　-->
-    <div class="body">
+    <div id="body">
         <!-- sidemenu　-->
-        <div class="side_menu">
+        <div id="side_menu">
+            <h3>jesuica inu</h3>
             <ul>
-                <li><a href="index.html">トップページ</a></li>
-                <li><a href="index.html">TOP</a></li>
-                <li><a href="index.html">🍤</a></li>
-                <li><a href="index.html">あ</a></li>
-                <li><a href="index.html">外部リンク</a></li>
+                <li><a href="index.html">Sargino</a></li>
+                <li><a href="index.html">TOPP</a></li>
+                <li><a href="index.html">Shpama</a></li>
+                <li><a href="index.html">a</a></li>
+                <li><a href="index.html">Fin rigro</a></li>
             </ul>
+            <h3>jesuica inu</h3>
             <ul>
-                <li><a href="index.html">トップページ</a></li>
-                <li><a href="index.html">TOP</a></li>
-                <li><a href="index.html">🍤</a></li>
-                <li><a href="index.html">あ</a></li>
-                <li><a href="index.html">外部リンク</a></li>
+                <li><a href="index.html">Sargino</a></li>
+                <li><a href="index.html">TOPP</a></li>
+                <li><a href="index.html">Shpama</a></li>
+                <li><a href="index.html">a</a></li>
+                <li><a href="index.html">Fin rigro</a></li>
             </ul>
+            <h3>jesuica inu</h3>
             <ul>
-                <li><a href="index.html">トップページ</a></li>
-                <li><a href="index.html">TOP</a></li>
-                <li><a href="index.html">🍤</a></li>
-                <li><a href="index.html">あ</a></li>
-                <li><a href="index.html">外部リンク</a></li>
+                <li><a href="index.html">Sargino</a></li>
+                <li><a href="index.html">TOPP</a></li>
+                <li><a href="index.html">Shpama</a></li>
+                <li><a href="index.html">a</a></li>
+                <li><a href="index.html">Fin rigro</a></li>
             </ul>
         </div>
         <!-- /sidemenu　-->
 
         <!-- main　-->
-        <div class="main">
+        <div id="main">
             <h1>Thomarma Asa Skia mu.</h1>
             <p>Ketm uwi orejim isk sank akla mseikamilgu vei sank shtchi.</p>
         </div>
@@ -70,7 +73,7 @@
 
     <!-- footer　-->
     <footer>
-        <div class="footer">
+        <div id="footer">
             <p>
                 <script type="text/javascript">document.write(new Date().getFullYear())</SCRIPT>
                 <a href="./">IIII-Ark-Hush</A>
