--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="keywords" content="Blog, IIII-Ark-Hush">
     <meta name="viewport" content="width=device-width">
 
+    <!-- favicon -->
+    <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
+
     <!-- CSS -->
     <link href="base.css" rel="stylesheet">
     <!-- /CSS -->
