--- a/index.html
+++ b/index.html
@@ -16,75 +16,75 @@
 </head>
 
 <body>
-    <!-- headmenu -->
-    <header>
-        <div id="header">
-            <a href="index.html">非常識なエーテル</a>
-        </div>
-    </header>
+    <div id="wrapper">
+        <!-- headder -->
+        <header>
+            <div id="header">
+                <a href="index.html">非常識なエーテル</a>
+            </div>
+            <!-- headmenu -->
+            <div id="head_menu">
+                <ul>
+                    <li><a href="index.html">TOP PAGE</a></li>
+                    <li><a href="index.html">TOP</a></li>
+                    <li><a href="index.html">🍤</a></li>
+                    <li><a href="index.html">A</a></li>
+                    <li><a href="index.html">Link</a></li>
+                </ul>
+            </div>
+            <!-- /headmenu -->
+        </header>
+        <!-- /headder -->
 
-    <div id="head_menu">
-        <ul>
-            <li><a href="index.html">TOP PAGE</a></li>
-            <li><a href="index.html">TOP</a></li>
-            <li><a href="index.html">🍤</a></li>
-            <li><a href="index.html">A</a></li>
-            <li><a href="index.html">Link</a></li>
-        </ul>
+        <div id="container">
+            <!-- sidemenu　-->
+            <div id="side_menu">
+                <h3>jesuica inu</h3>
+                <ul>
+                    <li><a href="index.html">Sargino</a></li>
+                    <li><a href="index.html">TOPP</a></li>
+                    <li><a href="index.html">Shpama</a></li>
+                    <li><a href="index.html">a</a></li>
+                    <li><a href="index.html">Fin rigro</a></li>
+                </ul>
+                <h3>jesuica inu</h3>
+                <ul>
+                    <li><a href="index.html">Sargino</a></li>
+                    <li><a href="index.html">TOPP</a></li>
+                    <li><a href="index.html">Shpama</a></li>
+                    <li><a href="index.html">a</a></li>
+                    <li><a href="index.html">Fin rigro</a></li>
+                </ul>
+                <h3>jesuica inu</h3>
+                <ul>
+                    <li><a href="index.html">Sargino</a></li>
+                    <li><a href="index.html">TOPP</a></li>
+                    <li><a href="index.html">Shpama</a></li>
+                    <li><a href="index.html">a</a></li>
+                    <li><a href="index.html">Fin rigro</a></li>
+                </ul>
+            </div>
+            <!-- /sidemenu　-->
+
+            <!-- main　-->
+            <div id="main_contents">
+                <h1>Thomarma Asa Skia mu.</h1>
+                <p>Ketm uwi orejim isk sank akla mseikamilgu vei sank shtchi.</p>
+            </div>
+            <!-- /main -->
+        </div>
+
+        <!-- footer　-->
+        <footer>
+            <div id="footer">
+                <p>
+                    <script type="text/javascript">document.write(new Date().getFullYear())</SCRIPT>
+                    <a href="./">IIII-Ark-Hush</A>
+                </p>
+            </div>
+        </footer>
+        <!-- /footer　-->
     </div>
-    <!-- /headmenu -->
-
-    <!-- body　-->
-    <div id="body">
-        <!-- sidemenu　-->
-        <div id="side_menu">
-            <h3>jesuica inu</h3>
-            <ul>
-                <li><a href="index.html">Sargino</a></li>
-                <li><a href="index.html">TOPP</a></li>
-                <li><a href="index.html">Shpama</a></li>
-                <li><a href="index.html">a</a></li>
-                <li><a href="index.html">Fin rigro</a></li>
-            </ul>
-            <h3>jesuica inu</h3>
-            <ul>
-                <li><a href="index.html">Sargino</a></li>
-                <li><a href="index.html">TOPP</a></li>
-                <li><a href="index.html">Shpama</a></li>
-                <li><a href="index.html">a</a></li>
-                <li><a href="index.html">Fin rigro</a></li>
-            </ul>
-            <h3>jesuica inu</h3>
-            <ul>
-                <li><a href="index.html">Sargino</a></li>
-                <li><a href="index.html">TOPP</a></li>
-                <li><a href="index.html">Shpama</a></li>
-                <li><a href="index.html">a</a></li>
-                <li><a href="index.html">Fin rigro</a></li>
-            </ul>
-        </div>
-        <!-- /sidemenu　-->
-
-        <!-- main　-->
-        <div id="main">
-            <h1>Thomarma Asa Skia mu.</h1>
-            <p>Ketm uwi orejim isk sank akla mseikamilgu vei sank shtchi.</p>
-        </div>
-        <!-- /main -->
-    </div>
-    <!-- /body　-->
-
-    <!-- footer　-->
-    <footer>
-        <div id="footer">
-            <p>
-                <script type="text/javascript">document.write(new Date().getFullYear())</SCRIPT>
-                <a href="./">IIII-Ark-Hush</A>
-            </p>
-        </div>
-    </footer>
-    <!-- /footer　-->
-
 
 </body>
 
