Add list images

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             <!-- headmenu -->
             <div id="head_menu">
                 <ul>
-                    <li><a href="index.html">TOP PAGE</a></li>
-                    <li><a href="index.html">TOP</a></li>
-                    <li><a href="index.html">🍤</a></li>
-                    <li><a href="index.html">A</a></li>
-                    <li><a href="index.html">Link</a></li>
+                    <li><a href="index.html">TOPページ</a></li>
+                    <li><a href="index.html">紹介</a></li>
+                    <li><a href="index.html">記事</a></li>
+                    <li><a href="index.html">Wiki</a></li>
+                    <li><a href="index.html">リンク</a></li>
                 </ul>
             </div>
             <!-- /headmenu -->
@@ -39,7 +39,7 @@
         <div id="container">
             <!-- sidemenu　-->
             <div id="side_menu">
-                <h3>jesuica inu</h3>
+                <h3>最新の記事</h3>
                 <ul>
                     <li><a href="index.html">Sargino</a></li>
                     <li><a href="index.html">TOPP</a></li>
@@ -47,7 +47,7 @@
                     <li><a href="index.html">a</a></li>
                     <li><a href="index.html">Fin rigro</a></li>
                 </ul>
-                <h3>jesuica inu</h3>
+                <h3>技術資料</h3>
                 <ul>
                     <li><a href="index.html">Sargino</a></li>
                     <li><a href="index.html">TOPP</a></li>
@@ -55,7 +55,7 @@
                     <li><a href="index.html">a</a></li>
                     <li><a href="index.html">Fin rigro</a></li>
                 </ul>
-                <h3>jesuica inu</h3>
+                <h3>外部リンク</h3>
                 <ul>
                     <li><a href="index.html">Sargino</a></li>
                     <li><a href="index.html">TOPP</a></li>
