--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div id="footer">
                 <p>
                     <script type="text/javascript">document.write(new Date().getFullYear())</SCRIPT>
-                    <a href="https://github.com/IIII-Ark-Hush">IIII-Ark-Hush</A>
+                    <a href="https://github.com/IIII-Ark-Hush" target="_blank" rel="noopener">IIII-Ark-Hush</A>
                 </p>
             </div>
         </footer>
