--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <div id="wrapper">
         <!-- headder -->
         <header>
+            <div id="head_tab">
+                <p>非常識なエーテル</p>
+            </div>
             <div id="header">
                 <a href="index.html">非常識なエーテル</a>
             </div>
@@ -39,17 +42,17 @@
         <div id="container">
             <!-- sidemenu　-->
             <div id="side_menu">
-                <h3>最新の記事</h3>
+                <h3>ブログ</h3>
                 <ul>
-                    <li><a href="index.html">Sargino</a></li>
-                    <li><a href="index.html">TOPP</a></li>
-                    <li><a href="index.html">Shpama</a></li>
-                    <li><a href="index.html">a</a></li>
-                    <li><a href="index.html">Fin rigro</a></li>
+                    <li><a href="index.html">2021/01</a></li>
+                    <li><a href="index.html">2020/12</a></li>
+                    <li><a href="index.html">2020/11</a></li>
+                    <li><a href="index.html">2020/10</a></li>
+                    <li><a href="index.html">2020/9</a></li>
                 </ul>
                 <h3>技術資料</h3>
                 <ul>
-                    <li><a href="index.html">Sargino</a></li>
+                    <li><a href="index.html">Wiki TOP</a></li>
                     <li><a href="index.html">TOPP</a></li>
                     <li><a href="index.html">Shpama</a></li>
                     <li><a href="index.html">a</a></li>
@@ -57,19 +60,18 @@
                 </ul>
                 <h3>外部リンク</h3>
                 <ul>
-                    <li><a href="index.html">Sargino</a></li>
-                    <li><a href="index.html">TOPP</a></li>
-                    <li><a href="index.html">Shpama</a></li>
-                    <li><a href="index.html">a</a></li>
-                    <li><a href="index.html">Fin rigro</a></li>
+                    <li><a href="index.html">Twitter</a></li>
+                    <li><a href="index.html">GitHub</a></li>
+                    <li><a href="index.html">電気研究会</a></li>
+
                 </ul>
             </div>
             <!-- /sidemenu　-->
 
             <!-- main　-->
             <div id="main_contents">
-                <h1>Thomarma Asa Skia mu.</h1>
-                <p>Ketm uwi orejim isk sank akla mseikamilgu vei sank shtchi.</p>
+                <h1>ようこそ</h1>
+                <p>現在本サイトに内容はありません。</p>
             </div>
             <!-- /main -->
         </div>
