--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="ja">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FRWCDK20Y9"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-FRWCDK20Y9');
+    </script>
     <meta charset="utf-8">
     <TITLE>非常識なエーテル</TITLE>
     <meta name="keywords" content="Blog, IIII-Ark-Hush">
