--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                 </ul>
                 <h3>外部リンク</h3>
                 <ul>
-                    <li><a href="index.html">Twitter</a></li>
-                    <li><a href="index.html">GitHub</a></li>
-                    <li><a href="index.html">電気研究会</a></li>
+                    <li><a href="https://twitter.com/SLIDE_D0OR" target="_blank" rel="noopener">Twitter</a></li>
+                    <li><a href="https://github.com/IIII-Ark-Hush" target="_blank" rel="noopener">GitHub</a></li>
+                    <li><a href="http://denken.ws.hosei.ac.jp/index.html" target="_blank" rel="noopener">電気研究会</a></li>
 
                 </ul>
             </div>
