--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
 
         <!-- footer　-->
         <footer>
+            <div id="foot_sitebar">
+                <p>
+                    TOP
+                </p>
+            </div>
             <div id="footer">
                 <p>
                     <script type="text/javascript">document.write(new Date().getFullYear())</SCRIPT>
