--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="viewport" content="width=device-width">
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
+    <link rel="shortcut icon" href="icon\favicon.ico" type="image/vnd.microsoft.icon">
 
     <!-- CSS -->
     <link href="base.css" rel="stylesheet">
@@ -68,12 +68,15 @@
                     <li><a href="index.html">Fin rigro</a></li>
                 </ul>
                 <h3>外部リンク</h3>
-                <ul>
-                    <li><a href="https://twitter.com/SLIDE_D0OR" target="_blank" rel="noopener">Twitter</a></li>
-                    <li><a href="https://github.com/IIII-Ark-Hush" target="_blank" rel="noopener">GitHub</a></li>
-                    <li><a href="http://denken.ws.hosei.ac.jp/index.html" target="_blank" rel="noopener">電気研究会</a></li>
+                <div id="outlink">
+                    <ul>
+                        <li><a href="https://twitter.com/SLIDE_D0OR" target="_blank" rel="noopener">Twitter</a></li>
+                        <li><a href="https://github.com/IIII-Ark-Hush" target="_blank" rel="noopener">GitHub</a></li>
+                        <li><a href="http://denken.ws.hosei.ac.jp/index.html" target="_blank" rel="noopener">電気研究会</a>
+                        </li>
 
-                </ul>
+                    </ul>
+                </div>
             </div>
             <!-- /sidemenu　-->
 
