--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="viewport" content="width=device-width">
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="icon\favicon.ico" type="image/vnd.microsoft.icon">
+    <link rel="shortcut icon" href="icon/favicon.ico" type="image/vnd.microsoft.icon">
 
     <!-- CSS -->
     <link href="base.css" rel="stylesheet">
