--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         gtag('config', 'G-FRWCDK20Y9');
     </script>
     <meta charset="utf-8">
-    <TITLE>非常識なエーテル</TITLE>
+    <title>非常識なエーテル</title>
     <meta name="keywords" content="Blog, IIII-Ark-Hush">
     <meta name="viewport" content="width=device-width">
 
@@ -40,7 +40,7 @@
                     <li><a href="index.html">TOPページ</a></li>
                     <li><a href="index.html">紹介</a></li>
                     <li><a href="index.html">記事</a></li>
-                    <li><a href="index.html">Wiki</a></li>
+                    <li><a href="index.html">技術情報</a></li>
                     <li><a href="index.html">リンク</a></li>
                 </ul>
             </div>
@@ -97,8 +97,8 @@
             </div>
             <div id="footer">
                 <p>
-                    <script type="text/javascript">document.write(new Date().getFullYear())</SCRIPT>
-                    <a href="https://github.com/IIII-Ark-Hush" target="_blank" rel="noopener">IIII-Ark-Hush</A>
+                    <script type="text/javascript">document.write(new Date().getFullYear())</script>
+                    <a href="https://github.com/IIII-Ark-Hush" target="_blank" rel="noopener">IIII-Ark-Hush</a>
                 </p>
             </div>
         </footer>
