--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                 </ul>
                 <h3>技術資料</h3>
                 <ul>
-                    <li><a href="index.html">Wiki TOP</a></li>
-                    <li><a href="index.html">TOPP</a></li>
-                    <li><a href="index.html">Shpama</a></li>
-                    <li><a href="index.html">a</a></li>
-                    <li><a href="index.html">Fin rigro</a></li>
+                    <li><a href="index.html">環境</a></li>
+                    <li><a href="index.html">精度</a></li>
+                    <li><a href="index.html">Shp</a></li>
+                    <li><a href="index.html">ボール</a></li>
+                    <li><a href="index.html">Fin</a></li>
                 </ul>
                 <h3>外部リンク</h3>
                 <div id="outlink">
