--- a/index.html
+++ b/index.html
@@ -1,110 +1,30 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja" xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FRWCDK20Y9"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-FRWCDK20Y9');
-    </script>
-    <meta charset="utf-8">
     <title>非常識なエーテル</title>
-    <meta name="keywords" content="Blog, IIII-Ark-Hush">
-    <meta name="viewport" content="width=device-width">
+    <meta charset="utf-8">
+    <meta name="description" content="This is the insane ether page of IIII ark hush." />
+    <meta name="keywords" content="ホームページ" />
 
-    <!-- favicon -->
-    <link rel="shortcut icon" href="icon/favicon.ico" type="image/vnd.microsoft.icon">
+    <!-- favicon設定 -->
+    <link rel="icon" href="icon/githicon.png">
 
-    <!-- CSS -->
-    <link href="base.css" rel="stylesheet">
-    <!-- /CSS -->
+
+
+    <!-- 外部CSS読み込み -->
+    <link href="./css/base.css" rel="stylesheet" type="text/css" />
 </head>
 
+
 <body>
-    <div id="wrapper">
-        <!-- headder -->
-        <header>
-            <div id="head_tab">
-                <p>非常識なエーテル</p>
-            </div>
-            <div id="header">
-                <a href="index.html">非常識なエーテル</a>
-            </div>
-            <!-- headmenu -->
-            <div id="head_menu">
-                <ul>
-                    <li><a href="index.html">TOPページ</a></li>
-                    <li><a href="index.html">紹介</a></li>
-                    <li><a href="index.html">記事</a></li>
-                    <li><a href="index.html">技術情報</a></li>
-                    <li><a href="index.html">リンク</a></li>
-                </ul>
-            </div>
-            <!-- /headmenu -->
-        </header>
-        <!-- /headder -->
-
-        <div id="container">
-            <!-- sidemenu　-->
-            <div id="side_menu">
-                <h3>ブログ</h3>
-                <ul>
-                    <li><a href="index.html">2021/01</a></li>
-                    <li><a href="index.html">2020/12</a></li>
-                    <li><a href="index.html">2020/11</a></li>
-                    <li><a href="index.html">2020/10</a></li>
-                    <li><a href="index.html">2020/9</a></li>
-                </ul>
-                <h3>技術資料</h3>
-                <ul>
-                    <li><a href="index.html">環境</a></li>
-                    <li><a href="index.html">精度</a></li>
-                    <li><a href="index.html">Shp</a></li>
-                    <li><a href="index.html">ボール</a></li>
-                    <li><a href="index.html">Fin</a></li>
-                </ul>
-                <h3>外部リンク</h3>
-                <div id="outlink">
-                    <ul>
-                        <li><a href="https://twitter.com/SLIDE_D0OR" target="_blank" rel="noopener">Twitter</a></li>
-                        <li><a href="https://github.com/IIII-Ark-Hush" target="_blank" rel="noopener">GitHub</a></li>
-                        <li><a href="http://denken.ws.hosei.ac.jp/index.html" target="_blank" rel="noopener">電気研究会</a>
-                        </li>
-
-                    </ul>
-                </div>
-            </div>
-            <!-- /sidemenu　-->
-
-            <!-- main　-->
-            <div id="main_contents">
-                <h1>ようこそ</h1>
-                <p>現在本サイトに内容はありません。</p>
-            </div>
-            <!-- /main -->
-        </div>
-
-        <!-- footer　-->
-        <footer>
-            <div id="foot_sitebar">
-                <p>
-                    TOP
-                </p>
-            </div>
-            <div id="footer">
-                <p>
-                    <script type="text/javascript">document.write(new Date().getFullYear())</script>
-                    <a href="https://github.com/IIII-Ark-Hush" target="_blank" rel="noopener">IIII-Ark-Hush</a>
-                </p>
-            </div>
-        </footer>
-        <!-- /footer　-->
+    <header>
+        <p class="clock-time"></p>
+    </header>
+    <div id="headmenu">
+        
     </div>
-
+<script src="clock.js"></script>
 </body>
 
 </html>
