--- a/index.html
+++ b/index.html
@@ -14,17 +14,50 @@
 
     <!-- 外部CSS読み込み -->
     <link href="./css/base.css" rel="stylesheet" type="text/css" />
+    <link href="./css/index.css" rel="stylesheet" type="text/css" />
 </head>
 
 
 <body>
-    <header>
-        <p class="clock-time"></p>
-    </header>
-    <div id="headmenu">
-        
+    <div id="wrapper">
+        <div id="maincont">
+            <header>
+                <div id="title">
+                    <span id="title1">
+                        ｉｎｓａｎｅ
+                    </span>
+                    <span id="title2">
+                        ｅｔｈｅｒ
+                    </span>
+                </div>
+            </header>
+            <div id="youkoso">
+                ようこそ
+            </div>
+        </div>
+        <div id="MenuBox">
+            <div id="MenuBoxTitle">
+                ×××××××<br>
+                MENU<br>
+                ×××××××
+            </div>
+            <div id="Menulist">
+                <ul>
+                    <li id="CurrentPage">
+                        TOP
+                    </li>
+                    <li>
+                        TOP
+                    </li>
+                    <li>
+                        TOP
+                    </li>
+                </ul>
+            </div>
+        </div>
+
     </div>
-<script src="clock.js"></script>
+
 </body>
 
 </html>
