--- a/index.html
+++ b/index.html
@@ -31,8 +31,34 @@
                     </span>
                 </div>
             </header>
-            <div id="youkoso">
-                ようこそ
+            <div id="PageWrap">
+                <div id="PageTitle">
+                    <div id="PageTitleTxt">
+                        ようこそ
+                    </div>
+                </div>
+                <div id="PageCont">
+                    <div class="col">
+                        このウェブサイトは内容を持っていません
+                    </div>
+                    <div class="colborder">
+
+                        ///////////////////////////////////
+                    </div>
+                    <div class="col">
+                        
+                    </div>
+                    <div class="colborder">
+
+                        ///////////////////////////////////
+                    </div>
+                    <div class="col">
+                    </div>
+                    <div class="colborder" id="lastborder">
+                        ///////////////////////////////////
+                    </div>
+    
+                </div>
             </div>
         </div>
         <div id="MenuBox">
@@ -44,13 +70,19 @@
             <div id="Menulist">
                 <ul>
                     <li id="CurrentPage">
-                        TOP
+                        <span class="emoji">
+                            &#x1f642;ようこそ
+                        </span>
                     </li>
                     <li>
-                        TOP
+                        <span class="emoji">
+                            &#x1f4ce;リンク
+                        </span>
                     </li>
                     <li>
-                        TOP
+                        <span class="emoji">
+                            &#x1f50f;ブログ始めた
+                        </span>
                     </li>
                 </ul>
             </div>
