--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
             <div id="side_menu">
                 <h3>ブログ</h3>
                 <ul>
-                    <li><a href="index.html">2021/01</a></li>
-                    <li><a href="index.html">2020/12</a></li>
-                    <li><a href="index.html">2020/11</a></li>
-                    <li><a href="index.html">2020/10</a></li>
-                    <li><a href="index.html">2020/9</a></li>
+                    <li><a href="index.html">Date1</a></li>
+                    <li><a href="index.html">Date2</a></li>
+                    <li><a href="index.html">Date3</a></li>
+                    <li><a href="index.html">Date4</a></li>
+                    <li><a href="index.html">Date5</a></li>
                 </ul>
                 <h3>技術資料</h3>
                 <ul>
-                    <li><a href="index.html">環境</a></li>
-                    <li><a href="index.html">精度</a></li>
-                    <li><a href="index.html">Shp</a></li>
-                    <li><a href="index.html">ボール</a></li>
-                    <li><a href="index.html">Fin</a></li>
+                    <li><a href="index.html">Tag1</a></li>
+                    <li><a href="index.html">Tag2</a></li>
+                    <li><a href="index.html">Tag3</a></li>
+                    <li><a href="index.html">Tag4</a></li>
+                    <li><a href="index.html">Tag5</a></li>
                 </ul>
                 <h3>外部リンク</h3>
                 <div id="outlink">
