コピーライトを変更
コピーライトを変更

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <img src="logo-image.png" alt="Company Logo">
         <div class="camname">UnrefinedDesignLab</div>
         <footer>
-            <p>&copy; 2023 Brutalist Drawing App. All rights reserved.</p>
+            <p>&copy; 2023 UnrefinedDesignLab All rights reserved.</p>
         </footer>
     </section>
 
