--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <!-- Product 1: Drawing web application -->
                 <div class="product">
                     <div class="product-img-wrapper">
-                        <img src="./img/CoreInk-sq.png" alt="Drawing app thumbnail" />
+                        <img src="./img/CoreInk.png" alt="Drawing app thumbnail" />
                     </div>
                     <h3 class="product-title">CoreInk</h3>
                     <p class="product-description">
@@ -250,7 +250,7 @@
                     <!-- Product 2: Example product -->
                     <div class="product">
                         <div class="product-img-wrapper">
-                            <img src="./img/CoreInk-sq.png" alt="Example product thumbnail" />
+                            <img src="./img/Ufo.png" alt="Example product thumbnail" />
                         </div>
                     <h3 class="product-title"> Example Product</h3>
                     <p class="product-description">
