--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <!-- Product 1: Drawing web application -->
                 <div class="product">
                     <div class="product-img-wrapper">
-                        <img src="./img/CoreInk.png" alt="Drawing app thumbnail" />
+                        <img src="./img/coreInk.png" alt="Drawing app thumbnail" />
                     </div>
                     <h3 class="product-title">CoreInk</h3>
                     <p class="product-description">
