--- a/error-page.html
+++ b/error-page.html
@@ -10,7 +10,8 @@
     <div class="container">
         <h1>404 Not Found</h1>
         <p>お探しのページは、削除されたか、一時的にご利用できない状態になっているようです。 <br>
-            でもまあ、少なくともこの恐竜は幸せですよ？</p>
+            <br>
+            ちなみにこれは恐竜です</p>
         <img src="./img/dinosaur.png" alt="404 Dinosaur">
     </div>
 </body>
