--- a/index.html
+++ b/index.html
@@ -248,10 +248,22 @@
                     </div>
 
                     <!-- Product 2: Example product -->
-                    <div class="product">
-                        <div class="product-img-wrapper">
-                            <img src="./img/Ufo.png" alt="Example product thumbnail" />
-                        </div>
+                <div class="product">
+                    <div class="product-img-wrapper">
+                        <img src="./img/letter.png" alt="Example product thumbnail" />
+                    </div>
+                    <h3 class="product-title">μText.io</h3>
+                    <p class="product-description">
+                        究極のノイズレスデザインで、<br>
+                        執筆者のクリアな思考を<br>
+                        補助します。
+                    </p>
+                    <a href="./muText/index.html" class="product-link">Discover More</a>
+                </div>
+                <div class="product">
+                    <div class="product-img-wrapper">
+                        <img src="./img/Ufo.png" alt="Example product thumbnail" />
+                    </div>
                     <h3 class="product-title"> Example Product</h3>
                     <p class="product-description">
                         ここに掲載される画期的製品も、想像を絶する方法であなたの人生を変えることでしょう。
@@ -278,7 +290,7 @@
                     <h3>リンク集</h3>
                     <ul>
                         <li>
-                            <a href="#">
+                            <a href="./blog/index.html">
                                 ブログ
                             </a>
                         </li>
@@ -298,9 +310,9 @@
                         最新情報
                     </h3>
                     <ul >
-                        <li ><a href="#">2022年度春季休暇推進事務局総合特別区域推進部が選定した『春季総合特別観光振興興行に資する桜の名所』について</a></li>
-                        <li><a href="#">愛玩用動物の健康診断結果に基づく被飼育環境下での生活習慣に関する分析と記録</a></li>
-                        <li ><a href="#">『新年の抱負（令和3年度版）』を発表しました</a></li>
+                        <li ><a href="./blog/index.html">2022年度春季休暇推進事務局総合特別区域推進部が選定した『春季総合特別観光振興興行に資する桜の名所』について</a></li>
+                        <li><a href="./blog/index.html">愛玩用動物の健康診断結果に基づく被飼育環境下での生活習慣に関する分析と記録</a></li>
+                        <li ><a href="./blog/index.html">『新年の抱負（令和3年度版）』を発表しました</a></li>
                     </ul>
                     <div class="clickbait-article">
                         <a href="./clickbait_article/index.html">
@@ -312,7 +324,7 @@
                         リンク集
                     </h3>
                     <div class="news-section-link">
-                        <a href="#">
+                        <a href="./blog/index.html">
                             ブログ
                         </a>
                     </div>
@@ -438,6 +450,10 @@
                     <li><button class="social-button" data-message="Another fake link!">Noruwey</button></li>
                 </ul>
             </div>
+            <p>
+                <br>
+                このページはGPT-4を用いて作成されました
+            </p>
         </footer>
         <script src="./js/main.js"></script>
         <script src="./js/button.js"></script>
