Add Publication page and section

--- a/clickbait_article/index.html
+++ b/clickbait_article/index.html
@@ -52,7 +52,7 @@
 
     <footer>
         <p>Connect with us: Facebook | Twitter | Instagram</p>
-        <p>Copyright &copy; 2023 IIII-Ark-Hush. All rights reserved.</p>
+        <p>Copyright &copy; 2023 IIII=H Lab. All rights reserved.</p>
     </footer>
 </body>
 
