--- a/muText/index.html
+++ b/muText/index.html
@@ -15,7 +15,7 @@
     <div class="logo-container">
         <a href="../index.html" class="logo-link">
             <img src="./img/Logo.png" alt="Logo" class="site-logo" />
-            <span class="site-name">III=Ark=Hush</span>
+            <span class="site-name">IIII=H Lab.</span>
         </a>
     </div>
     <header>
