--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>IIII=ARK=HUSH</title>
+        <title>IIII=H Lab.</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link
         href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Zen+Kaku+Gothic+Antique:wght@400;700&display=swap"
         rel="stylesheet">
+        <link
+            href="https://fonts.googleapis.com/css2?family=BIZ+UDPGothic:wght@400;700&family=BIZ+UDPMincho:wght@400;700&family=Source+Serif+Pro&display=swap"
+            rel="stylesheet">
         <link
             href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Zen+Kaku+Gothic+Antique:wght@400;700&display=swap"
             rel="stylesheet">
@@ -329,11 +332,12 @@
                         </a>
                     </div>
                     <p>
-                        2022 IIII-Ark-Hush All rights reserved.
+                        2022 IIII=H Lab. All rights reserved.
                     </p>
                 </div>
             </div>
         </section>
+
         <section id="subscribe" class="newsletter-salon">
             <div class="newsletter-container">
                 <div class="newsletter-image">
@@ -359,10 +363,31 @@
                     
             </div>
         </section>
+        <section class="publications">
+            <div class="publications-container">
+
+                <h2>PUBLICATIONS</h2>
+                <ul>
+                    <li>
+                        <a href="./research/paper1.html">
+                            <h3>似非学術的フレームワークにおける非貢献的要素の網羅的分析</h3>
+                        </a>
+                        <p>IIII=H Lab. | April 1, 2023</p>
+                    </li>
+                    <li>
+                        <a href="./error-page.html">
+                            <h3>Publication 2 Title</h3>
+                        </a>
+                        <p>Author Name | Publication Date</p>
+                    </li>
+                    <!-- More publications go here -->
+                </ul>
+            </div>
+        </section>
         <footer>
             <div class="top-row">
                 <div class="awards">
-                    <h3>Our Illustrious Achievements</h3>
+                    <h3>受賞</h3>
                     <ul>
                         <li>
                             <img src="award1.jpg" alt="Award 1">
@@ -399,7 +424,7 @@
                     </ul>
                 </div>
                 <div class="corporate-collabs">
-                    <h3>Influential Collaborations</h3>
+                    <h3>協力</h3>
                     <ul>
                         <li>
                             <img src="company1.jpg" alt="Company 1">
