CoreInkトップコピー変更

--- a/CoreInk/index.html
+++ b/CoreInk/index.html
@@ -44,12 +44,12 @@
         <div class="column">
             <div class="col-lg-6 box-shadow">
                 <h3>
-                    CoreInkのパワーと汎用性を<br>
-                    インタラクティブなデモで体験
+                    アートとテクノロジー、<br>
+                    CoreInkで融合
                 </h3>
                 <p>
-                    無制限のカラー・ピッカー、ダイナミック・ブラシサイズ・コントロール、直感的なインターフェイスで<br>
-                    デジタル・アートの未来を体験してみましょう!
+                    速さ、使いやすさ、シームレスなUX。
+                    創造のために必要なすべてのツールが、この1つに。
                 </p>
             </div>
             <div class="col-lg-6">
