--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                     <p class="product-description">
                         ここに掲載される画期的製品も、想像を絶する方法であなたの人生を変えることでしょう。
                     </p>
-                    <a href="error-page.html" class="product-link">Discover More</a>
+                    <a href="./error_page/index.html" class="product-link">Discover More</a>
                 </div>
             </div>
         </section>
@@ -363,27 +363,21 @@
                     
             </div>
         </section>
-        <section class="publications">
-            <div class="publications-container">
+<section class="publications">
+    
+    <div class="publication">
+        <div class="publicationtitle">Title of Paper 1</div>
+        <div class="publicationdetails">Submitted on: 2023-03-01 | Authors: John Doe, Jane Smith | Published in: <span
+                class="journal">Journal of Innovative Research</span></div>
+    </div>
+    <div class="publication">
+        <div class="publicationtitle">Title of Paper 2</div>
+        <div class="publicationdetails">Submitted on: 2023-02-15 | Authors: John Doe, Jane Smith | Published in: <span
+                class="journal">International Journal of Technology</span></div>
+    </div>
+    <!-- Add more publications here -->
+</section>
 
-                <h2>PUBLICATIONS</h2>
-                <ul>
-                    <li>
-                        <a href="./research/paper1.html">
-                            <h3>似非学術的フレームワークにおける非貢献的要素の網羅的分析</h3>
-                        </a>
-                        <p>IIII=H Lab. | April 1, 2023</p>
-                    </li>
-                    <li>
-                        <a href="./error-page.html">
-                            <h3>Publication 2 Title</h3>
-                        </a>
-                        <p>Author Name | Publication Date</p>
-                    </li>
-                    <!-- More publications go here -->
-                </ul>
-            </div>
-        </section>
         <footer>
             <div class="top-row">
                 <div class="awards">
