--- a/research/paper1.html
+++ b/research/paper1.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/paper1.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=BIZ+UDPGothic:wght@400;700&family=BIZ+UDPMincho:wght@400;700&family=Source+Serif+Pro&display=swap" rel="stylesheet">
-    <script defer src="./js/main.js"></script>
+    <script defer src="./js/paper1.js"></script>
     <title>似非学術的フレームワークにおける非貢献的要素の網羅的分析</title>
 </head>
 
