--- a/CoreInk/index.html
+++ b/CoreInk/index.html
@@ -35,7 +35,7 @@
             <h2>IIII CoreInk</h2>
             <h2>アートとテクノロジー、<br>
             CoreInkで融合</h2>
-            <h3>速さ、使いやすさ、シームレスなUX。
+            <h3>速さ、使いやすさ、シームレスなUX。<br>
             創造のために必要なすべてのツールが、この1つに。</h3>
             <a href="#demo-section" class="cta-button">Try Our Demo</a>
         </div>
@@ -89,7 +89,8 @@
                 </div>
             </div>
             <div class="col-md-4 col-md-4-right box-shadow">
-                <h3>色も想像力も、無制限。</h3>
+                <h3>色も想像力も、<br>
+                    無制限。</h3>
                 <div class="flexcont">
                     <p>
                         限りなく自由なパレット。<br>
@@ -99,7 +100,7 @@
                 </div>
             </div>
                 <div class="col-md-4 col-md-4-left box-shadow">
-                    <h3>最高のブラシワーク、再考。</h3>
+                    <h3>最高のブラシワーク、<br>再考。</h3>
                     <div class="flexcont">
                         <img src="./img/brush-size-control.png" alt="Dynamic Brush Size Control">
                         <p>
