--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>IIII=H Lab.</title>
+        <title>IIII Lab.</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link
@@ -332,7 +332,7 @@
                         </a>
                     </div>
                     <p>
-                        2022 IIII=H Lab. All rights reserved.
+                        2022 IIII Lab. All rights reserved.
                     </p>
                 </div>
             </div>
