--- a/research/index.html
+++ b/research/index.html
@@ -42,7 +42,7 @@
                 <div class="research-article">
                     <h3><a href="article-publication-page.html">A Comprehensive Analysis of Non-Contributing Elements in
                             Pseudo-Non-Academic Frameworks</a></h3>
-                    <p class="author">by IIII=H Lab.</p>
+                    <p class="author">by IIII Lab.</p>
                     <p class="description">This research article explores the non-contributing elements in
                         pseudo-non-academic frameworks and their impact on overall performance...</p>
                     <a href="article-publication-page.html" class="read-more">Read More</a>
@@ -50,7 +50,7 @@
                 <div class="research-article">
                     <h3><a href="article-publication-page.html">A Comprehensive Analysis of Non-Contributing Elements in
                             Pseudo-Non-Academic Frameworks</a></h3>
-                    <p class="author">by IIII=H Lab.</p>
+                    <p class="author">by IIII Lab.</p>
                     <p class="description">This research article explores the non-contributing elements in
                         pseudo-non-academic frameworks and their impact on overall performance...</p>
                     <a href="article-publication-page.html" class="read-more">Read More</a>
