--- a/research/paper1.html
+++ b/research/paper1.html
@@ -25,7 +25,7 @@
                 <h1>
                     似非学術的フレームワークにおける非貢献的要素の網羅的分析
                 </h1>
-                <p>IIII=H Lab.</p>
+                <p>IIII Lab.</p>
                 <div class="article-metadata">
                     <p>April 1, 2023,</p>
                     <p>Journal of Pseudo-Academic Endeavors,</p>
@@ -179,7 +179,7 @@
             
         </div>
     <footer>
-        <p>© 2023 IIII=H Lab. All Rights Reserved.</p>
+        <p>© 2023 IIII Lab. All Rights Reserved.</p>
     </footer>
 </body>
 
