--- a/decadent_alphabet/index.html
+++ b/decadent_alphabet/index.html
@@ -13,7 +13,7 @@
     <canvas id="noise" class="noise"></canvas>
     <div class="alphabet"></div>
     <div class="content">
-        <h1 class="title">IIII=H Lab.</h1>
+        <h1 class="title">IIII Lab.</h1>
         <h2 class="subtitle">Omnis realitas, sub nostra manu.</h2>
         <nav class="menu">
             <ul>
